--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="vieport" content="width=device-width, initial-scale=1">
 	<title>Diplom</title>
-	<link rel="stylesheet" type="diplom2/text/css" href="css/main.css">
+	<link rel="stylesheet" type="/text/css" href="/css/main.css">
 </head>
 <body>
 	<header class="header">
