--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="vieport" content="width=device-width, initial-scale=1">
 	<title>Diplom</title>
-	<link rel="stylesheet" type="/text/css" href="/css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<header class="header">
@@ -21,8 +21,8 @@
 </a>
 
 <div class="title">
-	<h1>BE RECRUITED</h1>
-	<h2>PLAY COLLEGE SPORTS</h2>
+	<h1>BE RECRUITED
+	<span>PLAY COLLEGE SPORTS</span></h1>
 </div>
 <div class="buttons">
 	<a class="button__app" href="#">
@@ -48,7 +48,7 @@
 		 <source media="(min-width: 769px)" srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/footballer_566.png">
 		 	<!--<img src="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_192.png" alt="athlete">-->
 	</picture>
-	<h3>athlets</h3>
+	<h2>athlets</h2>
 	<ol>
 		<li class="connection">
 			<article class="connection_article"> <h4> <span>01</span>connection </h4><p>Connect with coaches directly, you can ping coaches to view profile.</p></article>
@@ -56,23 +56,23 @@
 		<li class="collaboration"> <article><h4><span>02</span>collaboration</h4><p>Work with other student athletes to  increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.</p>
 		</article>
 	</li>
-	<li class="growth"> <article><h4><span>03</span>growth</h4><p>Resources and tools for you to get better as a student Athelte. Access 
+	<li class="growth"> <article><h3><span>03</span>growth</h3><p>Resources and tools for you to get better as a student Athelte. Access 
 to training classes, tutor sessions, etc </p>
 </article>
 </li>
 </ol>
 </section>
 <section class="players">
-	<h3>players</h3>
+	<h2>players</h2>
 	<ol>
 		<li class="connection">
 			<article>
-				<h4>
+				<h3>
 					<span>
 						01
 					</span>
 					connection
-				</h4>
+				</h3>
 				<p>
 					Connect with talented athlete directly, you can watch their skills through 
 video showreels directly from Surface 1.
@@ -81,12 +81,12 @@ video showreels directly from Surface 1.
 		</li>
 		<li class="collaboration">
 			<article>
-				<h4>
+				<h3>
 					<span>
 						02
 					</span>
 					collaboration
-				</h4>
+				</h3>
 				<p>
 					Work with recruiter to increase your chances of finding talented athlete.
 				</p>
@@ -94,12 +94,12 @@ video showreels directly from Surface 1.
 		</li>
 		<li class="growth">
 			<article>
-				<h4>
+				<h3>
 					<span>
 						03
 					</span>
 					growth
-				</h4>
+				</h3>
 				<p>
 					Save your time, recruit proper athlets for your team.
 				</p>
@@ -114,7 +114,7 @@ video showreels directly from Surface 1.
 			<span>01</span>
 		</div>
 		<article>
-			<h3>be active</h3>
+			<h2>be active</h2>
 			<p>Post videos with your skills, Like and follow others 
 to be more popular.</p>
 		</article>
@@ -122,7 +122,7 @@ to be more popular.</p>
 
 <section class="find_contact">
 	<article>
-		<h3>find contact</h3>
+		<h2>find contact</h2>
 		<p>Contact others to find right coach or athlete you are
 looking for.</p>
 	</article>
@@ -137,7 +137,7 @@ looking for.</p>
 			<span>03</span>
 		</div>
 		<article>
-			<h3>work it</h3>
+			<h2>work it</h2>
 			<p>Enjoy being a student athlete, the recruiting process can be overwhelming, we want to make this enjoyable experience.</p>
 		</article>
 	</section>
@@ -153,7 +153,7 @@ looking for.</p>
 </svg>
 </a>
 <div class="text_footer">
-	<h2>Download app</h2>
+	<h1>Download app</h1>
 	<p>Show everyone what you can do!</p>
 </div>
 	</div>
