--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 </div>
 </header>
 <section class="athlets">
-	<picture>
-		<source media="(max-width: 320px" srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_192.png">
-			<source media="(min-width: 321px) and "(max-width: 768px) srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_497.png" >
-		 <source media="(min-width: 769px)" srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/footballer_566.png">
-		 	<!--<img src="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_192.png" alt="athlete">-->
+	<picture class="athlets_pic">
+		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/footballer_192.png">
+		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/footballer_497.png">
+		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/footballer_566.png">
+		 	<img class="athlets_pic" src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/footballer_566.png" alt="athlete">
 	</picture>
 	<h2>athlets</h2>
 	<ol>
@@ -63,6 +63,12 @@ to training classes, tutor sessions, etc </p>
 </ol>
 </section>
 <section class="players">
+	<picture class="players_pic">
+		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_302.png">
+		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_436.png" >
+		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_991.png">
+		 	<img class="players_pic" src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_991.png" alt="players">	
+		 </picture>
 	<h2>players</h2>
 	<ol>
 		<li class="connection">
@@ -109,7 +115,14 @@ video showreels directly from Surface 1.
 </section>
 <section class="next_step">
 	<section class="be_active">
-		<div class="be_active_pic"></div>
+		<div class="be_active_pic">
+			<picture>
+		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_640.jpg">
+		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_960.jpg" >
+		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_1024.jpg">
+		 	<img src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active.jpg" alt="be active">	
+		 </picture>
+		</div>
 		<div class="number">
 			<span>01</span>
 		</div>
