--- a/index.html
+++ b/index.html
@@ -142,10 +142,24 @@ looking for.</p>
 	<div class="number">
 		<span>02</span>
 	</div>
-	<div class="find_contact_pic"></div>
+	<div class="find_contact_pic">
+		<picture>
+		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_1024.jpg">
+		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_960.jpg" >
+		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_640.jpg">
+		 	<img src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact.jpg" alt="find contact">
+		 </picture>
+	</div>
 </section>
 <section class="work_it">
-		<div class="work_it_pic"></div>
+		<div class="work_it_pic">
+			<picture>
+		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_1024.jpg">
+		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_960.jpg" >
+		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_640.jpg">
+		 	<img src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it.jpg" alt="work it">
+		 </picture>
+		</div>
 		<div class="number">
 			<span>03</span>
 		</div>
