--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ to training classes, tutor sessions, etc </p>
 </section>
 <section class="players">
 	<picture class="players_pic">
-		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_302.png">
-		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_436.png" >
-		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_991.png">
+		<source media="(max-width: 640px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_302.png">
+		<source media="(min-width: 641px) and (max-width: 960px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_436.png">
+		<source media="(min-width: 961px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_991.png">
 		 	<img class="players_pic" src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/basketballer_991.png" alt="players">	
 		 </picture>
 	<h2>players</h2>
@@ -114,12 +114,12 @@ video showreels directly from Surface 1.
 	</ol>
 </section>
 <section class="next_step">
-	<section class="be_active">
+	<div class="be_active">
 		<div class="be_active_pic">
 			<picture>
-		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_640.jpg">
-		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_960.jpg" >
-		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_1024.jpg">
+		<source media="(max-width: 640px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_640.jpg">
+		<source media="(min-width: 641px) and (max-width: 960px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_960.jpg" >
+		<source media="(min-width: 961px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active_1024.jpg">
 		 	<img src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/be-active.jpg" alt="be active">	
 		 </picture>
 		</div>
@@ -131,9 +131,9 @@ video showreels directly from Surface 1.
 			<p>Post videos with your skills, Like and follow others 
 to be more popular.</p>
 		</article>
-	</section>
+	</div>
 
-<section class="find_contact">
+<div class="find_contact">
 	<article>
 		<h2>find contact</h2>
 		<p>Contact others to find right coach or athlete you are
@@ -144,19 +144,19 @@ looking for.</p>
 	</div>
 	<div class="find_contact_pic">
 		<picture>
-		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_1024.jpg">
-		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_960.jpg" >
-		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_640.jpg">
+		<source media="(max-width: 640px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_1024.jpg">
+		<source media="(min-width: 641px) and (max-width: 960px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_960.jpg" >
+		<source media="(min-width: 961px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact_640.jpg">
 		 	<img src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/find-contact.jpg" alt="find contact">
 		 </picture>
 	</div>
-</section>
-<section class="work_it">
+</div>
+<div class="work_it">
 		<div class="work_it_pic">
 			<picture>
-		<source media="(max-width: 320px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_1024.jpg">
-		<source media="(min-width: 321px) and (max-width: 768px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_960.jpg" >
-		<source media="(min-width: 769px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_640.jpg">
+		<source media="(max-width: 640px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_1024.jpg">
+		<source media="(min-width: 641px) and (max-width: 960px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_960.jpg" >
+		<source media="(min-width: 961px)" srcset="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it_640.jpg">
 		 	<img src="https://raw.githubusercontent.com/SashaKostina/diplom/master/img/work-it.jpg" alt="work it">
 		 </picture>
 		</div>
@@ -167,7 +167,7 @@ looking for.</p>
 			<h2>work it</h2>
 			<p>Enjoy being a student athlete, the recruiting process can be overwhelming, we want to make this enjoyable experience.</p>
 		</article>
-	</section>
+	</div>
 </section>
 <footer class="footer">
 	<div class="footer_main">
